[gd_scene load_steps=15 format=2]

[ext_resource path="res://global.gd" type="Script" id=1]
[ext_resource path="res://yomi.ogg" type="AudioStream" id=2]
[ext_resource path="res://Pause.wav" type="AudioStream" id=3]
[ext_resource path="res://yomi_but_intense.ogg" type="AudioStream" id=4]
[ext_resource path="res://goofi.ogg" type="AudioStream" id=5]
[ext_resource path="res://360662__inspectorj__falling-comedic-a.wav" type="AudioStream" id=6]
[ext_resource path="res://wrap.wav" type="AudioStream" id=7]
[ext_resource path="res://break.wav" type="AudioStream" id=8]
[ext_resource path="res://expel.wav" type="AudioStream" id=9]
[ext_resource path="res://Hurt.wav" type="AudioStream" id=10]
[ext_resource path="res://1up.wav" type="AudioStream" id=11]
[ext_resource path="res://win.wav" type="AudioStream" id=12]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("goofPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bgmusicPlayer:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("titlemusicPlayer:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("titlemusicPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("goofPlayer:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=2]
resource_name = "musicfade"
tracks/0/type = "value"
tracks/0/path = NodePath("goofPlayer:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bgmusicPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("bgmusicPlayer:volume_db")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -80.0, 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("titlemusicPlayer:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -80.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("titlemusicPlayer:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("goofPlayer:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[node name="global" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="LevelEndTimer" type="Timer" parent="."]
pause_mode = 2
one_shot = true

[node name="bgmusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="pauseSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="titlemusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -80.0

[node name="goofPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/musicfade = SubResource( 2 )

[node name="fall" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="delayFallTimer" type="Timer" parent="."]
one_shot = true

[node name="wrap" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="break" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="expel" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="playerHurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="telep" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[connection signal="timeout" from="LevelEndTimer" to="." method="_on_LevelEndTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="delayFallTimer" to="." method="_on_delayFallTimer_timeout"]
